Correction grid-gap

--- a/styles/app.css
+++ b/styles/app.css
@@ -337,6 +337,7 @@ a:hover {
 .article-container {
     display: flex;
     flex-direction: column;
+    grid-gap: 20px;
 }
 
 .article-suggestion-container {
